logs/watchdog_20251011_1645.log
[11/10/2025 16:45:01,68] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 16:45:01,98] END WATCHDOG 
